# ishmem

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  ishmem_config.h.in
.github/workflows/: scorecard.yml
cmake/: headers.cmake  ishmem  utils.cmake
cmake/Modules/: Copyright.txt  FindMPI.cmake
cmake/templates/: ISHMEMConfig.cmake.in  ISHMEMConfigVersion.cmake.in
docs/: README.md  acknowledgements.html  atomics.html  building_ishmem.html  collectives.html  compiling_and_running_programs.html  execution_model.html  genindex.html  index.html  intro.html  ishmem_in_devcloud.html  library_constants.html  library_setup_exit_query.html  memory_management.html  memory_model.html  memory_ordering.html  objects.inv  programming_model.html  pt2pt_sync.html  rma.html  search.html  searchindex.js  signaling.html  supported_features.html  teams.html  thread_support.html  utility.html  writing_programs.html
docs/_sources/: atomics.rst  building_ishmem.rst  collectives.rst  compiling_and_running_programs.rst  execution_model.rst  index.rst  intro.rst  ishmem_in_devcloud.rst  library_constants.rst  library_setup_exit_query.rst  memory_management.rst  memory_model.rst  memory_ordering.rst  programming_model.rst  pt2pt_sync.rst  rma.rst  supported_features.rst  teams.rst  thread_support.rst  writing_programs.rst
docs/_static/: documentation_options.js
docs/source/: Makefile  acknowledgements.rst  building_ishmem.rst  collectives.rst  compiling_and_running_programs.rst  conf.py  index.rst  intro.rst  library_constants.rst  library_setup_exit_query.rst  memory_model.rst  memory_ordering.rst  programming_model.rst  pt2pt_sync.rst  signaling.rst  supported_features.rst  utility.rst
examples/: 1_helloworld.cpp  2_get.cpp  3_library_apis.cpp  4_pi.cpp  5_pi_reduce.cpp  6_team_split_strided.cpp  CMakeLists.txt
examples/SHMEM/: 2_get.cpp  4_pi.cpp  5_pi_reduce.cpp  6_team_split_strided.cpp  CMakeLists.txt
pkgconfig/: ishmem.pc.in
pmi-simple/: CMakeLists.txt  mpl.h  pmi-simple_config.h.in  pmi.h  simple_pmi.cpp  simple_pmiutil.cpp  simple_pmiutil.h
scripts/: ishmrun
scripts/ctest/: mpi_wrapper  qsub_wrapper  srun_wrapper
src/: CMakeLists.txt  accelerator.cpp  accelerator.h  amo.cpp  amo_impl.h  amo_nbi.cpp  collectives.cpp  collectives.h  env_defs.h  env_utils.cpp  env_utils.h  err.cpp  gpuprint.cpp  gpuprint.h  impl_proxy.h  internal.cpp  internal.h  intrinsic.h  ipc.cpp  ipc.h  ishmem.cpp  ishmem.h  ishmem_config.h.in  ishmem_exp.h  ishmemx.h  malloc.cpp  memory.cpp  memory.h  memory_ordering.cpp  nbi.cpp  nbi_impl.h  on_queue.h  pmi.h  proxy.cpp  proxy.h  proxy_func.cpp  proxy_func.h  proxy_impl.h  proxy_types.h  rma.cpp  (+12 more)
src/collectives/: alltoall.cpp  alltoall_impl.h  barrier.cpp  broadcast.cpp  broadcast_impl.h  collect.cpp  collect_impl.h  reduce.cpp  reduce_impl.h  scan.cpp  scan_impl.h  sync.cpp  sync_impl.h
src/ishmem/: copy.h  env_defs.h  env_utils.h  err.h  types.h  util.h
src/runtime/: runtime_mpi.cpp  runtime_mpi.h  runtime_mpi_types.h  runtime_openshmem.cpp  runtime_openshmem.h  runtime_openshmem_types.h  runtime_pmi.cpp  runtime_pmi.h  runtime_pmi_types.h  runtime_types.h  wrapper.h  wrapper_mpi.cpp  wrapper_mpi.h  wrapper_openshmem.cpp  wrapper_openshmem.h  wrapper_pmi.cpp  wrapper_pmi.h
test/: CMakeLists.txt
test/apps/: CMakeLists.txt
test/apps/SHMEM/: CMakeLists.txt  jacobi.cpp
test/apps/jacobi/: CMakeLists.txt  jacobi.cpp
test/cmake/: common.cmake
test/common/: runtime_mpi.cpp  runtime_openshmem.cpp
test/include/: amo_test.h  common.h  ishmem_test_config.h.in  ishmem_tester.h  mpi_helper.h  pt2pt_sync_test.h  reduce_test.h  rma_test.h  runtime.h  runtime_mpi.h  runtime_openshmem.h  shmem_helper.h  team_reduce_test.h
test/performance/: CMakeLists.txt  alltoall_bw.cpp  amo_bw.cpp  broadcast_bw.cpp  collect_bw.cpp  fcollect_bw.cpp  get_bw.cpp  get_nbi_bw.cpp  put_bw.cpp  put_nbi_bw.cpp  reduce_bw.cpp  sync_bw.cpp
test/unit/: CMakeLists.txt  align.cpp  alltoall.cpp  amo_add.cpp  amo_and.cpp  amo_compare_swap.cpp  amo_compare_swap_nbi.cpp  amo_fetch.cpp  amo_fetch_add.cpp  amo_fetch_add_nbi.cpp  amo_fetch_and.cpp  amo_fetch_and_nbi.cpp  amo_fetch_inc.cpp  amo_fetch_inc_nbi.cpp  amo_fetch_nbi.cpp  amo_fetch_or.cpp  amo_fetch_or_nbi.cpp  amo_fetch_xor.cpp  amo_fetch_xor_nbi.cpp  amo_inc.cpp  amo_or.cpp  amo_set.cpp  amo_swap.cpp  amo_swap_nbi.cpp  amo_xor.cpp  barrier.cpp  broadcast.cpp  collect.cpp  exscan.cpp  fcollect.cpp  g.cpp  get.cpp  get_name.cpp  get_nbi.cpp  get_version.cpp  ibget.cpp  ibput.cpp  init_attr.cpp  inscan.cpp  int_amos.cpp  (+73 more)
test/unit/SHMEM/: CMakeLists.txt  align.cpp  alltoall.cpp  amo_add.cpp  amo_and.cpp  amo_compare_swap.cpp  amo_compare_swap_nbi.cpp  amo_fetch.cpp  amo_fetch_add.cpp  amo_fetch_add_nbi.cpp  amo_fetch_and.cpp  amo_fetch_and_nbi.cpp  amo_fetch_inc.cpp  amo_fetch_inc_nbi.cpp  amo_fetch_nbi.cpp  amo_fetch_or.cpp  amo_fetch_or_nbi.cpp  amo_fetch_xor.cpp  amo_fetch_xor_nbi.cpp  amo_inc.cpp  amo_or.cpp  amo_set.cpp  amo_swap.cpp  amo_swap_nbi.cpp  amo_xor.cpp  barrier.cpp  broadcast.cpp  collect.cpp  fcollect.cpp  g.cpp  get.cpp  get_name.cpp  get_nbi.cpp  get_version.cpp  ibget.cpp  ibput.cpp  init_attr.cpp  int_amos.cpp  int_get_device.cpp  int_get_device_local_device.cpp  (+62 more)
